extends Node2D

@onready var Username = get_node("ModalMain/Username")
@onready var Icon = get_node("ModalMain/PlayerIcon")
@onready var DiscordTag = get_node("ModalMain/DiscordTag")
@onready var TrophiesCount = get_node("ModalMain/TrophiesCount")
@onready var DivisionCount = get_node("ModalMain/DivisionPosition")
@onready var GlobalCount = get_node("ModalMain/GlobalPosition")
@onready var LastUpdate = get_node("ModalMain/LastUpdate")
@onready var DevBadge = get_node("ModalMain/DevBadge")
